--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,9 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - main 
+      - main
+permissions:
+  contents: write 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
